eglstream: XShape surface is Y inverted / upside-down
Affected version
- Fedora 34
- all mutter versions
- Wayland with NVidia EGLstream
Bug summary
When an X11 clients uses XShape, mutter builds a shape texture from the XShape rectangles. However, when using the EGLStream backend, that texture is applied with Y-inverted, i.e. upside-down.
Steps to reproduce
- Install the NVidia closed source proprietary driver
- Enable Wayland with the NVidia closed source driver by disabling the udev rule from GDM
- Login a Wayland session
- Run
xeyes
What happened
The shape is applied upside-down.
Also, notice that the shape even on the WM decorations applied on xterm
is upside-down as well.
What did you expect to happen
A shape applied the right way.
Relevant logs, screenshots, screencasts etc.
None
Edited by Olivier Fourdan